fixed grammatical errors, spaces and readability

--- a/index.css
+++ b/index.css
@@ -96,3 +96,8 @@ ul,
 a {
   font-family: serif;
 }
+#aboutParagraph{
+  font-size: 18px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
